# vulturecov

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vulturecov/: __main__.py  cov_report.py  vulture_report.py
tests/: test_cli.py  test_cov_report.py  test_vulture_report.py
tests/data/kili/: vulture_make_whitelist_mode.txt  vulture_normal_mode.txt
