[tool.poetry]
name = "vulturecov"
version = "0.1.0"
description = "Use your coverage report to remove Vulture false positives."
authors = ["Jonas Maison <Jonas1312@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "vulturecov", from = "src" },
]

[tool.poetry.scripts]
vulturecov = "vulturecov.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
